@@ -1,0 +1,3 @@
+#!/usr/bin/env python3
+VERSION = "48u [Fri 25 Aug 09:47:04 BST 2023]"
+BUILD = "0825094704"
